--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "reset:database": "echo '{\"todos\":[]}\n' > data.json",
+    "start-server": "json-server --no-cors data.json"
   },
   "dependencies": {
+    "axios": "^0.21.3",
     "core-js": "^3.6.5",
+    "json-server": "^0.16.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
